fix broken image

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ i+=1;
 document.getElementById("varout").innerHTML = i;
 }
 </script>
-<h1 class="marqueeX flip"><span><img src="https://pic.rutube.ru/video/a3/62/a362f60b98c212ab5036b2f0ecaa724f.jpg" width="400" class="flip" onclick="auPlay()"></img></span></h1>
+<h1 class="marqueeX flip"><span><img src="https://github.com/nanashinogonbee/want2eat/raw/master/gorin.jpg" width="400" class="flip" onclick="auPlay()"></img></span></h1>
 <h1 class="marqueeX"><span><div class="textdec"><font face="Comic Sans MS">А Я НЕ ПОНЯЛ ЧТО ВЫ ДЕЛАЕТЕ В МОЁМ ХОЛОДИЛЬНИКЕ</font></div></span></h1>
 <h2><div class="textdec blink_me">Вы хотите кушац?</div></h2>
 <br><br><br><br><br><br>
