--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <script>
 i=0;
 function auPlay(){
-var audio = new Audio('a ya ne ponyal.mp3');
+n=1;
+var audio = new Audio(n + '.mp3');
 audio.play();
 i+=1;
 document.getElementById("varout").innerHTML = i;
