--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 i=0;
 function auPlay(){
 n=1;
-var audio = new Audio(n + '.mp3');
+var audio = new Audio('sounds/' +n + '.mp3');
 audio.play();
 i+=1;
 document.getElementById("varout").innerHTML = i;
