--- a/index.html
+++ b/index.html
@@ -1,18 +1,29 @@
-<head>
+﻿<head>
 <title>не двигайте тубаретками я убью себя самого</title>
+
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <p id="varout"></p>
+
 <script>
-i=0;
-function auPlay(){
-n=1;
+i = 0;
+function auPlay()
+{
+
+min = 1;
+max = 24;
+n = Math.floor(Math.random() * (max - min + 1)) + min;
+
 var audio = new Audio('sounds/' +n + '.mp3');
+
 audio.play();
-i+=1;
+
+i += 1;
+
 document.getElementById("varout").innerHTML = i;
 }
+
 </script>
 <h1 class="marqueeX flip"><span><img src="https://github.com/nanashinogonbee/want2eat/raw/master/gorin.jpg" width="400" class="flip" onclick="auPlay()"></img></span></h1>
 <h1 class="marqueeX"><span><div class="textdec"><font face="Comic Sans MS">А Я НЕ ПОНЯЛ ЧТО ВЫ ДЕЛАЕТЕ В МОЁМ ХОЛОДИЛЬНИКЕ</font></div></span></h1>
