--- a/index.html
+++ b/index.html
@@ -3,6 +3,37 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+  <!-- Yandex.Metrika counter -->
+  <script type="text/javascript" >
+      (function (d, w, c) {
+          (w[c] = w[c] || []).push(function() {
+              try {
+                  w.yaCounter50726884 = new Ya.Metrika2({
+                      id:50726884,
+                      clickmap:true,
+                      trackLinks:true,
+                      accurateTrackBounce:true,
+                      ut:"noindex"
+                  });
+              } catch(e) { }
+          });
+
+          var n = d.getElementsByTagName("script")[0],
+              s = d.createElement("script"),
+              f = function () { n.parentNode.insertBefore(s, n); };
+          s.type = "text/javascript";
+          s.async = true;
+          s.src = "https://cdn.jsdelivr.net/npm/yandex-metrica-watch/tag.js";
+
+          if (w.opera == "[object Opera]") {
+              d.addEventListener("DOMContentLoaded", f, false);
+          } else { f(); }
+      })(document, window, "yandex_metrika_callbacks2");
+  </script>
+  <noscript><div><img src="https://mc.yandex.ru/watch/50726884?ut=noindex" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+  <!-- /Yandex.Metrika counter -->
+
 <p id="varout"></p>
 
 <script>
