a bit human-readable form

--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
           } else { f(); }
       })(document, window, "yandex_metrika_callbacks2");
   </script>
-  <noscript><div><img src="https://mc.yandex.ru/watch/50726884?ut=noindex" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+  <noscript>
+  	<div>
+  		<img src="https://mc.yandex.ru/watch/50726884?ut=noindex" style="position:absolute; left:-9999px;" alt="" />
+  	</div>
+  </noscript>
   <!-- /Yandex.Metrika counter -->
 
 <p id="varout"></p>
@@ -59,9 +63,26 @@ function showImage() {
 }
 
 </script>
-<h1 class="marqueeX flip"><span><script>showImage()</script></span></h1>
-<h1 class="marqueeX"><span><div class="textdec"><font face="Comic Sans MS">А Я НЕ ПОНЯЛ ЧТО ВЫ ДЕЛАЕТЕ В МОЁМ ХОЛОДИЛЬНИКЕ</font></div></span></h1>
-<h2><div class="textdec blink_me">Вы хотите кушац?</div></h2>
-<br><br><br><br><br><br>
+<h1 class="marqueeX flip">
+	<span>
+		<script>showImage()</script>
+	</span>
+</h1>
+<h1 class="marqueeX">
+	<span>
+		<div class="textdec">
+			<font face="Comic Sans MS">А Я НЕ ПОНЯЛ ЧТО ВЫ ДЕЛАЕТЕ В МОЁМ ХОЛОДИЛЬНИКЕ</font>
+		</div>
+	</span>
+</h1>
+<h2>
+	<div class="textdec blink_me">Вы хотите кушац?</div>
+</h2>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <h2 class="textdec" align="right">©2018 Powered by uCoz.</h2>
 </body>
